# api/pkg/server/swagger.json
@@ -2849,6 +2849,14 @@
                     "wallets"
                 ],
                 "summary": "Manage a subscription",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Organization ID",
+                        "name": "org_id",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Subscription session URL",
@@ -8302,6 +8310,9 @@
                 },
                 "org_id": {
                     "description": "If belongs to an organization",
+                    "type": "string"
+                },
+                "stripe_customer_id": {
                     "type": "string"
                 },
                 "updated_at": {
